--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p>404</p>
         <p>Page introuvable</p>
         <p>Il semblerait que votre page se soit perdue dans un trou noir...</p>
-        <img src="img/blackhole.png" alt="image trou noir" />
+        <img src="img/blackhole2.png" alt="image trou noir" />
         <div id="btn">
             <a href="https://github.com/AmoryAubert">Retour</a>
         </div>
